--- a/picologic.cabal
+++ b/picologic.cabal
@@ -2,7 +2,6 @@ name:                picologic
 version:             0.1
 synopsis:            Utilities for symbolic predicate logic expressions
 homepage:            https://github.com/sdiehl/picologic
--- description:         
 license:             MIT
 license-file:        LICENSE
 author:              Stephen Diehl
@@ -11,11 +10,18 @@ copyright:           2014 Stephen Diehl
 category:            Logic
 build-type:          Simple
 cabal-version:       >=1.10
+tested-with:         GHC == 7.6.3
 Bug-Reports:         https://github.com/sdiehl/picologic/issues
 
+description:
+  `picologic` provides symbolic logic expressions that can be integrated with the `picosat` solver.
+Source-Repository head
+    type: git
+    location: git@github.com:sdiehl/picologic.git
+
 Flag shell
-  Description: Build the interactive shell
-  Default:     False
+  description: Build the interactive shell
+  default:     False
 
 library
   exposed-modules:     
