--- a/picologic.cabal
+++ b/picologic.cabal
@@ -35,12 +35,12 @@ library
   hs-source-dirs:      src
   other-extensions:    DeriveDataTypeable, BangPatterns
   build-depends:       
-    base        >= 4.6 && <4.8,
-    picosat     >= 0.1 && <0.2,
-    containers  >= 0.5 && <0.6,
-    mtl         >= 2.1 && <2.2,
-    pretty      >= 1.1 && <1.2,
-    parsec      >= 3.1 && <3.2
+    base,
+    picosat,
+    containers,
+    mtl,
+    pretty,
+    parsec
   default-language:    Haskell2010
 
 executable picologic
