--- a/picologic.cabal
+++ b/picologic.cabal
@@ -61,3 +61,9 @@ executable picologic
     default-language:    Haskell2010
   else
     buildable: False
+
+--Todo: how to fail 'cabal test' on a QuickCheck error?
+--Test-Suite picologic-quickcheck
+--    type:       exitcode-stdio-1.0
+--    main-is:    tests/tests.hs
+--    build-depends: base, QuickCheck, containers, picologic
