--- a/picologic.cabal
+++ b/picologic.cabal
@@ -1,12 +1,12 @@
 name:                picologic
-version:             0.2.0
+version:             0.3.0
 synopsis:            Utilities for symbolic predicate logic expressions
 homepage:            https://github.com/sdiehl/picologic
 license:             MIT
 license-file:        LICENSE
 author:              Stephen Diehl
 maintainer:          stephen.m.diehl@gmail.com
-copyright:           2014 Stephen Diehl
+copyright:           2014-2017 Stephen Diehl
 category:            Logic
 build-type:          Simple
 cabal-version:       >=1.10
