--- a/picologic.cabal
+++ b/picologic.cabal
@@ -6,7 +6,7 @@ license:             MIT
 license-file:        LICENSE
 author:              Stephen Diehl
 maintainer:          stephen.m.diehl@gmail.com
-copyright:           2014-2017 Stephen Diehl
+copyright:           2014-2020 Stephen Diehl
 category:            Logic
 build-type:          Simple
 cabal-version:       >=1.10
@@ -36,9 +36,9 @@ library
   hs-source-dirs:      src
   other-extensions:    DeriveDataTypeable, BangPatterns
   build-depends:       
-    base        >= 4.6 && <4.10,
+    base        >= 4.6 && <5,
     picosat     >= 0.1 && <0.2,
-    containers  >= 0.5 && <0.6,
+    containers  >= 0.5 && <0.7,
     mtl         >= 2.1 && <2.4,
     pretty      >= 1.1 && <1.2,
     parsec      >= 3.1 && <3.2
@@ -53,7 +53,7 @@ executable picologic
     build-depends:       
       base        >= 2   && <5,
       picosat     >= 0.1 && <0.2,
-      containers  >= 0.5 && <0.6,
+      containers  >= 0.5 && <0.7,
       mtl         >= 2.1 && <2.4,
       pretty      >= 1.1 && <1.2,
       parsec      >= 3.1 && <3.2,
@@ -66,10 +66,12 @@ executable picologic
 --Todo: how to fail 'cabal test' on a QuickCheck error?
 Test-Suite picologic-quickcheck
    type:       exitcode-stdio-1.0
-   main-is:    tests.hs
+   main-is:    Test.hs
    hs-source-dirs: tests
    build-depends: 
       base >= 2 && <5,
+      tasty,
+      tasty-quickcheck,
       QuickCheck,
       containers,
       picosat,
